# rs-openwith-ext

./: .gitignore  Cargo.toml  README.md
src/: main.rs  service.rs  utils.rs
