[package]
name = "rs-openwith-ext"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
toml = "0.8.2"
serde = "1.0.189"
serde_derive = "1.0.189"
